# context-integrity-audit

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
data/: generator.py  map_ragbench.py
data/synthetic_logs/: ragbench_cuad.csv  scenario_baseline.csv  scenario_context_drift.csv  scenario_mixed_failure.csv  scenario_severe.csv
src/context_integrity/: __init__.py  __main__.py  base.py  cli.py  contract.py  evaluator.py  remediation.py  scoring.py
src/context_integrity/checks/: pii_scanner.py
src/context_integrity/modules/: context_staleness.py  grounding_fidelity.py  lineage_traceability.py  policy_alignment.py  reproducibility.py  retrieval_boundary.py  schema_consistency.py
tests/: test_context_integrity.py
